--- a/Android/SmartShopper/app/src/main/res/values/strings.xml
+++ b/Android/SmartShopper/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Smart Shopper</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="action_search">Search</string>
 </resources>
