--- a/Android/SmartShopper/app/src/main/res/values/strings.xml
+++ b/Android/SmartShopper/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_splash_screen">SplashScreen</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_search">Search</string>
+    <string name="search_hint">Search Products</string>
 </resources>
