--- a/Android/SmartShopper/app/src/main/res/values/strings.xml
+++ b/Android/SmartShopper/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="action_search">Search</string>
     <string name="search_hint">Search Products</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
