--- a/Android/SmartShopper/app/src/main/res/values/strings.xml
+++ b/Android/SmartShopper/app/src/main/res/values/strings.xml
@@ -4,18 +4,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="action_search">Search</string>
     <string name="search_hint">Search Products</string>
-
-    <string-array name="top_kek">
-        <item>KEK 1</item>
-        <item>KEK 2</item>
-        <item>KEK 3</item>
-        <item>KEK 4</item>
-        <item>KEK 5</item>
-        <item>KEK 6</item>
-        <item>KEK 7</item>
-        <item>KEK 8</item>
-        <item>KEK 9</item>
-    </string-array>
+    <string name="cart_file_name">cart.txt</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
