--- a/Android/SmartShopper/app/src/main/res/values/strings.xml
+++ b/Android/SmartShopper/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="action_search">Search</string>
     <string name="search_hint">Search Products</string>
     <string name="cart_file_name">cart.txt</string>
+    <string name="login_stat">login_stat</string>
+    <string name="curr_user">curr_user</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
