--- a/Android/SmartShopper/app/src/main/res/values/strings.xml
+++ b/Android/SmartShopper/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="cart_file_name">cart.txt</string>
     <string name="login_stat">login_stat</string>
     <string name="curr_user">curr_user</string>
+    <string name="sort_opt">sort_opt</string>
+    <string name="num_item">num_item_opt</string>
+    <string name="sort_spin_pos">sort_spinner_position</string>
+    <string name="num_spin_pos">num_item_spinner_position</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
